# skillsight

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  prefect.yaml  pyproject.toml
.github/workflows/: ci.yml  dataset-mirrors.yml  live-smoke.yml
contracts/: static_latest.schema.json  static_leaderboard_page.schema.json  static_search_index.schema.json  static_skill_list_item.schema.json  worker_openapi.json  worker_search_openapi.json
contracts/fixtures/v1/: skill_detail.json  skills_list.json
docs/: architecture.md  deployment.md
scripts/: live-smoke-check.sh
src/skillsight/: __init__.py  cli.py  contracts.py  settings.py
src/skillsight/clients/: __init__.py  browser.py  http.py  r2.py
src/skillsight/discovery/: __init__.py  all_time.py  leaderboard.py  merger.py  repo_pages.py  search_api.py  sitemap.py
src/skillsight/extraction/: __init__.py  detail_page.py  html_parser.py  rsc_parser.py
src/skillsight/models/: __init__.py  checkpoint.py  skill.py
src/skillsight/pipeline/: __init__.py  discovery_flow.py  export_flow.py  extraction_flow.py  orchestrator.py  publish_datasets.py  timeseries_flow.py  validation_flow.py  web_static_pack.py
src/skillsight/storage/: __init__.py  (+8 more)
tests/: conftest.py  factories.py
tests/fixtures/: repo_page.html  rsc_payload.txt  search_response.json  sitemap.xml  skill_detail_page.html
tests/integration/: test_cli_contract.py
tests/unit/: test_all_time.py  test_browser.py  test_checkpoint.py  test_cli.py  test_completeness.py  test_contract_sync.py  test_contracts.py  test_detail_page.py  test_discovery.py  test_discovery_convergence.py  test_discovery_flow.py  test_duckdb_query.py  test_export_flow.py  test_extraction.py  test_extraction_flow.py  test_extraction_pipeline_flow.py  test_html_parser.py  test_http_client.py  test_leaderboard.py  test_models.py  test_pipeline_init.py  test_publish_datasets.py  test_quality.py  test_r2.py  test_repo_pages.py  test_repo_parser.py  test_rsc_parser.py  test_search_api.py  test_settings.py  test_sitemap.py  test_storage.py  test_timeseries.py  test_timeseries_flow.py  test_utils.py  test_validation_flow.py  test_web_static_pack.py
web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
web/src/: App.tsx  index.css
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.fallback.toml  wrangler.toml
worker/src/: index.test.ts  index.ts
(+24 files in other folders)
