[project]
name = "skillsight"
version = "0.1.0"
description = "Skillsight data pipeline and analytics contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "aiolimiter>=1.2.1",
  "duckdb>=1.4.0",
  "filelock>=3.16",
  "httpx[http2]>=0.28.1",
  "loguru>=0.7.3",
  "lxml>=6.0.2",
  "obstore>=0.8",
  "prefect>=3.6.17",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.0",
  "pyarrow>=18.0.0",
  "rich>=13.9.4",
  "sqlmodel>=0.0.30",
  "tenacity>=9.1.4",
  "typer>=0.15.2",
]

[project.optional-dependencies]
browser = [
  "camoufox[geoip]>=0.4.11",
  "playwright>=1.49.1",
]

[project.scripts]
skillsight = "skillsight.cli:app"

[project.urls]
Homepage = "https://github.com/wyattowalsh/skillsight"
Repository = "https://github.com/wyattowalsh/skillsight"
"Bug Tracker" = "https://github.com/wyattowalsh/skillsight/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillsight"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.15.1",
  "ty>=0.0.17",
]
notebook = [
  "ipykernel>=7.2.0",
  "ipywidgets>=8.1.8",
  "jupyter-collaboration>=4.2.1",
  "jupyter-lsp>=2.3.0",
  "jupyter-server-ydoc>=2.2.1",
  "jupyterlab>=4.5.4",
  "jupyterlab-code-formatter>=3.0.3",
  "jupyterlab-git>=0.51.4",
  "jupyterlab-lsp>=5.2.0",
  "jupytext>=1.19.1",
  "nbconvert>=7.17.0",
  "nbdime>=4.0.4",
  "nbqa>=1.9.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RET", "ASYNC", "TC"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["skillsight"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["skillsight"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@overload",
]
